# metadatafs

./: Makefile.am  ProjectHome.md  README  configure.ac
src/: Makefile.am  libid3tag.c  metadatafs.c  metadatafs.h
src/lib/: Makefile.am  libid3tag.c  libmetadatafs.c  libmetadatafs.h
tools/: Makefile.am  metadatafs-fill.c  metadatafs-rename.c
trunk/metadatafs/: Makefile.am  configure.ac
trunk/metadatafs/src/: Makefile.am  metadatafs.c
trunk/metadatafs/src/lib/: libid3tag.c  libmetadatafs.c  libmetadatafs.h
trunk/utils/: normalize.sh
utils/: normalize.sh
