## Process this file with automake to produce Makefile.in

SUBDIRS = src

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp

EXTRA_DIST = \
AUTHORS \
COPYING \
README

ACLOCAL_AMFLAGS = -I m4
